# zellmin

./: .zitree.toml.example  CONFIG.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION.md  QUICKREF.md  README.md  flake.nix  justfile
.github/workflows/: ci.yml
lib/host-storage/: Cargo.toml
lib/host-storage/src/: lib.rs
lib/session-registry/: Cargo.toml
lib/session-registry/src/: lib.rs
lib/ui/: Cargo.toml
lib/ui/src/: components.rs  lib.rs  style.rs
plugins/seshmin/: Cargo.toml
plugins/seshmin/src/: config.rs  main.rs  state.rs  storage.rs
plugins/seshmin/src/session/: manager.rs  mod.rs  types.rs  validation.rs
plugins/seshmin/src/state/: display.rs  events.rs  keys.rs  mod.rs  tests.rs
plugins/seshmin/src/ui/: mod.rs
plugins/seshmin/src/zoxide/: mod.rs  search.rs
plugins/treemin/: Cargo.toml
plugins/treemin/src/: config.rs  main.rs  naming.rs  state.rs  storage.rs
plugins/treemin/src/commands/: git.rs  mod.rs  zellij.rs
plugins/treemin/src/ui/: mod.rs
plugins/zessionz/: Cargo.toml
plugins/zessionz/src/: config.rs  main.rs  state.rs
plugins/zessionz/src/session/: manager.rs  types.rs
plugins/zessionz/src/ui/: mod.rs
plugins/zessionz/src/zoxide/: directory.rs  mod.rs  search.rs
plugins/zitree/: Cargo.toml
plugins/zitree/src/: naming.rs  state.rs  validation.rs
plugins/zitree/src/commands/: git.rs  mod.rs
plugins/zitree/src/ui/: mod.rs
src/: commands.rs  config.rs  config_tests.rs  main.rs  naming.rs  state.rs  ui.rs
src/commands/: mod.rs  zellij.rs
src/ui/: components.rs  mod.rs  style.rs
treemin/sessions/: managed.txt
