[package]
name = "seshmin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seshmin"
path = "src/main.rs"
bench = false

[dependencies]
host-storage = { path = "../../lib/host-storage" }
plugin-ui = { path = "../../lib/ui" }
session-registry = { path = "../../lib/session-registry" }
zellij-tile = "=0.44.3"
fuzzy-matcher = "0.3.7"
humantime = "2.2.0"
