[package]
name = "treemin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "treemin"
path = "src/main.rs"
test = false
bench = false

[dependencies]
host-storage = { path = "../../lib/host-storage" }
plugin-ui = { path = "../../lib/ui" }
session-registry = { path = "../../lib/session-registry" }
zellij-tile = "=0.44.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
